# interactive-npc

./: Dockerfile  README.md  compose.yaml  log.py  main.py  pyproject.toml  settings.py  stream.py
npc/: README.md  factory.py  pyproject.toml
npc/src/: npc_factory.py
npc/src/npc/: crew.py  factory.py  npc_factory.py  villagers.py
npc/src/npc/config/: agents.yaml  tasks.yaml
npc/src/npc/knowledge/: backstory.txt
npc/villagers/marcus_halt/: marcus_halt.py
npc/villagers/marcus_halt/knowledge/: backstory.md
