[project]
name = "unity-npc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[anthropic]>=1.14.6",
    "fastapi>=0.136.3",
    "logfire>=4.6.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
