[project]
name = "npc"
version = "0.1.0"
description = "npc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
npc = "npc.main:run"
run_crew = "npc.main:run"
train = "npc.main:train"
replay = "npc.main:replay"
test = "npc.main:test"
run_with_trigger = "npc.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
